--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
          <li><a href="#projeto" class="">Projeto</a></li>
          <li><a href="#playlist">Playlist</a></li>
-         <li><a href="#tintapreta">Tinta Preta</a></li>
+         <li><a href="#sobre">Tinta Preta</a></li>
          <li><a href="#contato">Contato</a></li>
        </ul>
 
@@ -64,7 +64,7 @@
 
   </div>
 
-    <div class="content projeto">
+    <div class="content projeto" id="projeto">
         <div class="texto-sobre">
             <h2>Projeto</h2>
             <p>
@@ -113,7 +113,7 @@
         </div>
     </div>
 
-    <div class="content sobre">
+    <div class="content sobre" id="sobre">
         <div class="texto-sobre">
             <h2>Tinta Preta</h2>
             <p>
@@ -131,7 +131,7 @@
         </div>
     </div>
 
-    <div class="content contato">
+    <div class="content contato" id="contato">
         <div class="">
             <p>artetintapreta@gmail.com</p>
         </div>
