--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
               <div class="magazine-viewport">
               	<div class="container">
               		<div class="magazine">
-              			<!-- Next button -->
+
               			<div ignore="1" class="next-button"></div>
-              			<!-- Previous button -->
+
               			<div ignore="1" class="previous-button"></div>
               		</div>
               	</div>
@@ -80,6 +80,10 @@
               O projeto consiste em um Bookazine inspirado na vida e na obra de Noel, através de um passeio por sua biografia,
               composições e seu impacto na história da música brasileira, repleto de ilustrações originais.
             </p>
+
+            <div class="download-projeto">
+              <a href="" download="" class="botao-download-projeto" type="button" id="download-projeto">Download</a>
+            </div>
 
         </div>
     </div>
