--- a/index.html
+++ b/index.html
@@ -144,6 +144,20 @@
         <div class="">
             <p>artetintapreta@gmail.com</p>
         </div>
+
+        <div class="">
+          <a href="https://www.facebook.com/aliciamarinaguimaraes" target="_blank">
+            <img src="./img/alicia.jpg" class="redondo-img redondo" alt="" ></a>
+            <a href="https://www.facebook.com/jmaillab" target="_blank">
+              <img src="./img/jessica.jpg" class="redondo-img redondo" alt="" ></a>
+              <a href="https://www.facebook.com/juliane.barrosdasilva.9" target="_blank">
+                <img src="./img/juliane.jpg" class="redondo-img redondo" alt="" ></a>
+                <a href="https://www.facebook.com/luryko" target="_blank">
+                  <img src="./img/luciana.jpg" class="redondo-img redondo" alt="" ></a>
+                  <a href="https://www.facebook.com/artevalterferrari" target="_blank">
+                    <img src="./img/valter.jpg" class="redondo-img redondo" alt="" ></a>
+        </div>
+
     </div>
 
 
