acertos na aparencia do contato

--- a/index.html
+++ b/index.html
@@ -141,26 +141,20 @@
     </div>
 
     <div class="content contato" id="contato">
-        <div class="">
             <p>artetintapreta@gmail.com</p>
-        </div>
-
-        <div class="">
-          <a href="https://www.facebook.com/aliciamarinaguimaraes" target="_blank">
-            <img src="./img/alicia.jpg" class="redondo-img redondo" alt="" ></a>
-            <a href="https://www.facebook.com/jmaillab" target="_blank">
-              <img src="./img/jessica.jpg" class="redondo-img redondo" alt="" ></a>
-              <a href="https://www.facebook.com/juliane.barrosdasilva.9" target="_blank">
-                <img src="./img/juliane.jpg" class="redondo-img redondo" alt="" ></a>
-                <a href="https://www.facebook.com/luryko" target="_blank">
-                  <img src="./img/luciana.jpg" class="redondo-img redondo" alt="" ></a>
-                  <a href="https://www.facebook.com/artevalterferrari" target="_blank">
-                    <img src="./img/valter.jpg" class="redondo-img redondo" alt="" ></a>
-        </div>
-
     </div>
-
-
+    <div class="content componentes">
+        <a href="https://www.facebook.com/aliciamarinaguimaraes" target="_blank">
+            <img src="./img/alicia.jpg" class="redondo-img redondo" alt="" ></a>
+        <a href="https://www.facebook.com/jmaillab" target="_blank">
+            <img src="./img/jessica.jpg" class="redondo-img redondo" alt="" ></a>
+        <a href="https://www.facebook.com/juliane.barrosdasilva.9" target="_blank">
+            <img src="./img/juliane.jpg" class="redondo-img redondo" alt="" ></a>
+        <a href="https://www.facebook.com/luryko" target="_blank">
+            <img src="./img/luciana.jpg" class="redondo-img redondo" alt="" ></a>
+        <a href="https://www.facebook.com/artevalterferrari" target="_blank">
+            <img src="./img/valter.jpg" class="redondo-img redondo" alt="" ></a>
+    </div>
 
         <script type="text/javascript" src="js/tintapreta.js"></script>
         <!-- Script Leitor PFD -->
