correcoes na aparencia

--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@
         <!-- Leitor de PDF-->
 
         <link rel="icon" type="img/png" href="pics/favicon.png" />
+
         <link rel="stylesheet" href="css/magazine.css">
         <link rel="stylesheet" href="css/custom.css">
+
         <script type="text/javascript" src="extras/jquery.min.1.7.js"></script>
         <script type="text/javascript" src="extras/jquery-ui-1.8.20.custom.min.js"></script>
         <script type="text/javascript" src="extras/modernizr.2.5.3.min.js"></script>
@@ -41,16 +43,17 @@
          <li><a href="#contato" class="scroll">Contato</a></li>
        </ul>
      </nav>
- -->
-
+-->
     <div class="topnav" id="myTopnav">
-        <a href="#top" class="scroll"><img class="img-brand" src="./img/Noel-Logo.svg" alt="Tinta Preta"></a>
+        <a href=""><img class="img-brand" src="./img/Noel-Logo.svg" alt="Tinta Preta"></a>
         <a href="#projeto" class="scroll">Projeto</a>
         <a href="#playlist" class="scroll">Playlist</a>
         <a href="#tintapreta" class="scroll">Tinta Preta</a>
         <a href="#contato" class="scroll">Contato</a>
         <a href="javascript:void(0);" style="font-size:15px;" class="material-icons icon" onclick="myFunction()">menu</a>
     </div>
+
+
 
     <a href="#" class="voltar-ao-topo"><i class="material-icons">keyboard_arrow_up</i></a>
 
@@ -95,9 +98,7 @@
               <h2>Playlist</h2>
             <div class="player">
                 <img src="" class="capa" id="capa-album" alt="">
-                <div class="titulo">
-                  <span id="nome-musica"></span>
-                </div>
+                <div class="titulo" id="nome-musica"></div>
                 <div class="">
                     <progress value="0" max="0" id="progresso" class=""></progress>
                 </div>
@@ -213,7 +214,6 @@
               });
 
         </script>
-
 
     </body>
 </html>
