alterações em tudo

--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
           <div class="player-list">
               <h2>Playlist</h2>
             <div class="player">
-                <img src="" class="capa" id="capa-album" alt="">
+                <div class="capa">
+                    <img src="" class="" id="capa-album" alt="">
+                </div>
+
                 <div class="titulo" id="nome-musica"></div>
                 <div class="">
                     <progress value="0" max="0" id="progresso" class=""></progress>
@@ -106,7 +109,7 @@
             </div>
             <div class="list-music scrollbar" id="lista"></div>
             <div class="download-album">
-              <a href="" download="" class="botao-download" type="button" id="download-album">Download</a>
+              <a href="./musics/noel_rosa.zip" download="" class="botao-download" type="button" id="download-album">Download</a>
             </div>
         </div>
     </div>
